media queries for content, navbar with display:none, and column adjustment for extra small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
     background-image: url("../images/bananas.png");
     background-repeat: repeat;
     background-color: #777777;
-    /* width: 960px; */
     font-size: 18px;
     display: flex;
     flex-direction: column;
@@ -105,7 +104,6 @@ img {
 p {
     margin: 20px;
     line-height: 30px;
-
 }
 
 footer {
@@ -159,23 +157,102 @@ input[type=submit]:hover {
     grid-template-columns: 210px 210px;
     grid-auto-rows: 210px;
     grid-gap: 10px;
-  }
-  
-  .box {
+}
+
+.box {
     position: relative;
     justify-content: center;
-  }
-  
-  .icon {
+}
+
+.icon {
     height: 100%;
-  }
-  
-  p.banner {
+}
+
+p.banner {
     position: absolute;
     bottom: -10px;
     width: 100%;
     background-color: #4aaaa5;
     color: #fff;
     font-family: 'Georgia', Times, Times New Roman, serif;
-  }
-   
+}
+
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+    .mainContent {
+        width: 100%;
+    }
+
+    ul {
+        width: 100%;
+    }
+
+    li a {
+        display: none;
+
+
+    }
+    .wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        /* grid-auto-rows: 210px; */
+        grid-gap: 10px;
+    }
+    p.banner {
+        width: 210px;
+    }
+
+}
+
+@media (max-width: 567.98px)  {
+    .mainContent {
+        width: 90%;
+    }
+
+    ul {
+        width: 90%;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+    .mainContent {
+        width: 90%;
+    }
+
+    ul {
+        width: 90%;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .mainContent {
+        width: 80%;
+    }
+
+    ul {
+        width: 80%;
+    }
+}
+
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .mainContent {
+        width: 80%;
+    }
+
+    ul {
+        width: 80%;
+    }
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    
+}
