--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -201,7 +201,7 @@ input[type=submit]:active {
 
 header {
     background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/banner5.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -339,6 +339,7 @@ header {
 
 .meal-photo {
     width: 100%;
+    height: 300px;
     margin: 0;
     overflow: hidden;
     background-color: #000;
