--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -12,7 +12,7 @@
 /* Small tablet to big tablet: from 768px to 1023px */
 @media only screen and (max-width: 1023px) {
     body { font-size: 18px; }
-    section { padding: 60px 0; }
+    section { padding: 60px 0 0 0; }
     
     .long-copy {
         width: 80%;
@@ -47,7 +47,7 @@
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
     body { font-size: 16px; }
-    section { padding: 30px 0; }
+    section { padding: 30px 0 0 0; }
     
     .row,
     .hero-text-box { padding: 0 4%; }
@@ -115,7 +115,7 @@
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
-    section { padding: 25px 0; }
+    section { padding: 25px 0 0 0; }
     .contact-form {width: 100%; }
 }
 
